{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 16,
  "lineage": "215c0d29-c2b5-c80a-68b3-813081aa2c03",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "dstevens-kalinich-sample-server",
            "fqdn": "dstevens-kalinich-sample-server.eastus.cloudapp.azure.com",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/publicIPAddresses/Derek-VM-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.171.136",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Derek-VM-pip-0",
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkInterfaces/Derek-VM-nic-0",
            "internal_domain_name_suffix": "0ph4nczglw3e1ggvbst43ml1bd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Derek-VM-ip-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/publicIPAddresses/Derek-VM-pip-0",
                "subnet_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "7C-1E-52-19-D3-92",
            "name": "Derek-VM-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "tags": {
              "source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Compute/virtualMachines/Derek-VM-vmLinux-0"
          },
          "dependencies": [
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet_count",
            "module.network.azurerm_subnet.subnet_for_each",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkInterfaces/Derek-VM-nic-0|/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkSecurityGroups/Derek-VM-nsg",
            "network_interface_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkInterfaces/Derek-VM-nic-0",
            "network_security_group_id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkSecurityGroups/Derek-VM-nsg"
          },
          "dependencies": [
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet_count",
            "module.network.azurerm_subnet.subnet_for_each",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkSecurityGroups/Derek-VM-nsg",
            "location": "eastus",
            "name": "Derek-VM-nsg",
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Allow remote protocol in from all locations",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_remote_22_in_all",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "0.0.0.0/0"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/networkSecurityGroups/Derek-VM-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "Derek-VM-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "dstevens-kalinich-sample-server",
            "fqdn": "dstevens-kalinich-sample-server.eastus.cloudapp.azure.com",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/publicIPAddresses/Derek-VM-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.171.136",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Derek-VM-pip-0",
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "module.linuxservers.data.azurerm_resource_group.vm"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_for_each",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "virtual_network_name": "acctvnet"
          },
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8be6cfd3-5d26-4dba-98d5-0ca7eeb17b0b",
            "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/virtualNetworks/acctvnet",
            "location": "eastus",
            "name": "acctvnet",
            "resource_group_name": "fall24-adv-scripting-dstevens-kalinich",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/02cb372f-c8c5-4a0c-b9f4-574eeb4d6d38/resourceGroups/fall24-adv-scripting-dstevens-kalinich/providers/Microsoft.Network/virtualNetworks/acctvnet/subnets/subnet1",
                "name": "subnet1"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}